--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/Edit.cshtml
@@ -9,32 +9,38 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(x=>x.UserId)
     <div class="form-horizontal row">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group col-md-6">
             Ten khach hang
-            <p class="form-control">@Model.Name</p>
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
         </div>
 
         <div class="form-group col-md-6">
             So dien thoai
-            <p class="form-control">@Model.PhoneNumber</p>
+            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
         </div>
 
         <div class="form-group col-md-6">
             Ngay dat
-            <p class="form-control">@Model.ReservationDate</p>
+            @Html.EditorFor(model => model.ReservationDate, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
         </div>
 
         <div class="form-group col-md-6">
             Nguoi lon
-            <p class="form-control">@Model.Adult</p>
+            @Html.EditorFor(model => model.Adult, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
         </div>
 
         <div class="form-group col-md-6">
             Tre em
-            <p class="form-control">@Model.Child</p>
+            @Html.EditorFor(model => model.Child, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
+        </div>
+
+        <div class="form-group col-md-12">
+            Ghi chu
+            @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
         </div>
 
         <div class="form-group col-md-12">
