--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
@@ -46,8 +46,8 @@
     <!-- Header Area Start Here -->
     <header class="main-header-area">
         <!-- Main Header Area Start -->
-        <div class="main-header  header-sticky sticky">
-            <div class="container-fluid">
+        <div class="main-header  header-sticky">
+            <div class="container custom-area">
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-xl-2 col-md-6 col-6 col-custom">
                         <div class="header-logo d-flex align-items-center">
@@ -88,6 +88,11 @@
                                         <span class="menu-text"> Thực đơn</span>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="@Url.Action("Index","Reservation")">
+                                        <span class="menu-text">Đặt bàn</span>
+                                    </a>
+                                </li>
                                 @if (Request.IsAuthenticated && User.IsInRole("Manager"))
                                 {
                                     <li class="nav-item dropdown">
@@ -103,11 +108,7 @@
                                     </li>
                                 }
 
-                                <li>
-                                    <a href="@Url.Action("Index","Reservation")">
-                                        <span class="menu-text">Đặt bàn</span>
-                                    </a>
-                                </li>
+
                                 @Html.Partial("_LoginPartial")
                             </ul>
                         </nav>
