--- a/src/FoodZone/FoodZone.Web/Views/Voucher/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Voucher/Index.cshtml
@@ -20,18 +20,18 @@
                                 <div class="blog-lst">
                                     <div class="single-blog">
                                         <div class="blog-image">
-                                            <a class="d-block" href="@Url.Action("Details", "Voucher", new {newsId = item.Id})">
+                                            <a class="d-block" href="@Url.Action("Details", "Voucher", new {voucherId = item.Id})">
                                                 <img src="~/assets/images/@item.Image" alt="Blog Image" class="w-100">
                                             </a>
                                         </div>
                                         <div class="blog-content">
                                             <div class="blog-text">
-                                                <h4><a href="@Url.Action("Details", "Voucher", new {newsId = item.Id})">@item.Title</a></h4>
+                                                <h4><a href="@Url.Action("Details", "Voucher", new {voucherId = item.Id})">@item.Title</a></h4>
                                                 <div class="blog-post-info">
                                                     <span>@item.InsertedAt.ToString("dd/MM/yyyy")</span>
                                                 </div>
                                                 <p>@item.ShortDescription</p>
-                                                <a href="@Url.Action("Details", "Voucher", new {newsId = item.Id})" class="readmore">Đọc thêm <i class="fa fa-long-arrow-right"></i></a>
+                                                <a href="@Url.Action("Details", "Voucher", new {voucherId = item.Id})" class="readmore">Đọc thêm <i class="fa fa-long-arrow-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
