Fix Bug in MenuAdmin, TableAdmin

--- a/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
@@ -5,6 +5,7 @@
     string floorTab = "floor-tab";
     var tables = new List<Table>();
 
+
     foreach (var item in Model)
     {
         tables.Add(item);
@@ -67,7 +68,7 @@
                                 </div>
 
                                 <div class="object section-table-style table-2">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="2-1" id="ban2nguoi1" onclick="onClick()">
+                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="2-1" id="ban2nguoi1">
                                     <label class="form-check-label label-table" for="ban2nguoi1">
                                         <img src="~/assets/images/booking/stand.png" alt="">
                                         <div>
@@ -79,7 +80,7 @@
                                     </label>
                                 </div>
                                 <div class="object section-table-style table-6">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="6-1" id="ban6nguoi1" onclick="onClick()">
+                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="6-1" id="ban6nguoi1">
                                     <label class="form-check-label label-table" for="ban6nguoi1">
                                         <img src="~/assets/images/booking/stand.png" alt="">
                                         <div>
@@ -91,7 +92,7 @@
                                     </label>
                                 </div>
                                 <div class="object section-table-style8 table-8">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="8-1" id="ban8nguoi1" onclick="onClick()">
+                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="8-1" id="ban8nguoi1">
                                     <label class="form-check-label label-table" for="ban8nguoi1">
                                         <img src="~/assets/images/booking/stand.png" alt="">
                                         <div>
@@ -127,7 +128,7 @@
                                     |
                                 </div>
                                 <div class="object section-table-style table-2">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="2-2" id="ban2nguoi2" onclick="onClick()">
+                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="2-2" id="ban2nguoi2">
                                     <label class="form-check-label label-table" for="ban2nguoi2">
                                         <img src="~/assets/images/booking/stand.png" alt="">
                                         <div>
@@ -139,7 +140,7 @@
                                     </label>
                                 </div>
                                 <div class="object section-table-style table-6">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="6-2" id="ban6nguoi2" onclick="onClick()">
+                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="6-2" id="ban6nguoi2">
                                     <label class="form-check-label label-table" for="ban6nguoi2">
                                         <img src="~/assets/images/booking/stand.png" alt="">
                                         <div>
@@ -151,7 +152,7 @@
                                     </label>
                                 </div>
                                 <div class="object section-table-style8 table-8">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="8-2" id="ban8nguoi2" onclick="onClick()">
+                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="8-2" id="ban8nguoi2">
                                     <label class="form-check-label label-table" for="ban8nguoi2">
                                         <img src="~/assets/images/booking/stand.png" alt="">
                                         <div>
