--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
@@ -18,7 +18,7 @@
         </div>
 
         <div class="form-group col-md-6">
-            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @placeholder = "Mô Tả" } })
+            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @placeholder = "Gia" } })
             @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
         </div>
 
