--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/Edit.cshtml
@@ -29,13 +29,8 @@
         </div>
 
         <div class="form-group col-md-6">
-            Nguoi lon
-            @Html.EditorFor(model => model.Adult, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
-        </div>
-
-        <div class="form-group col-md-6">
-            Tre em
-            @Html.EditorFor(model => model.Child, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
+            So nguoi
+            @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
         </div>
 
         <div class="form-group col-md-12">
