--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -1,109 +1,134 @@
 ﻿@model ReservationViewModel
 @{
     ViewBag.Title = "Đặt Bàn";
+    var now = DateTime.Now;
+    int nextHour = now.Hour + 1;
+
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 }
 
 <div class="contact-us-area mt-5">
     <div class="container custom-area col">
         <div class="row">
-            @using (Html.BeginForm("Index", "Reservation", FormMethod.Post, new { @class = "row", role = "form" }))
+            @if (Request.IsAuthenticated)
+            {
+                using (Html.BeginForm("Index", "Reservation", FormMethod.Post, new { @class = "row", role = "form" }))
+                {
+                    <div class="col">
+                        <div class="booking-box">
+
+                            @Html.AntiForgeryToken()
+                            <div class="comment-box">
+                                <h5 class="text-uppercase">Đặt bàn</h5>
+                                @Html.ValidationSummary("", new { @class = "text-danger" })
+                                <div class="col mt-3">
+                                    <div class="col-md-12 col-custom">
+                                        <div class="input-item mb-4">
+                                            <div class="title-booking">Tên khách hàng</div>
+                                            @Html.TextBoxFor(m => m.CusName, new { @class = "form-control", @placeholder = "Tên", @disabled = "disable" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12 col-custom">
+                                        <div class="input-item mb-4">
+                                            <div class="title-booking">Số điện thoại</div>
+                                            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @placeholder = "Số điện thoại", @disabled = "disable" })
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-custom">
+                                        <div class="input-item mb-4">
+                                            <div class="title-booking">Chọn Combo</div>
+                                            @Html.DropDownList("MenuId", null, htmlAttributes: new { @class = "form-select" })
+                                            @Html.ValidationMessageFor(model => model.MenuId, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12 col-custom">
+                                        <div class="input-item mb-4">
+                                            <div class="title-booking">Chọn ngày</div>
+                                            @Html.EditorFor(m => m.ReservationDate, new { htmlAttributes = new { @type = "date", @class = "border-0 rounded-0 w-100 input-area email gray-bg", @placeholder = "dd-mm-yyyy" } })
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-custom">
+                                        <div class="input-item mb-4 display-flex-col">
+
+                                            <div class="title-booking">Chọn thời gian đến</div>
+                                            <div class="display-flex-row">
+                                                <div class="title-time">Giờ</div>
+                                                <select class="form-select select-time" aria-label="Default select example" name="Hours" aria-placeholder="Chọn giờ">
+                                                    @if (now.Hour <= 14)
+                                                    {
+                                                        for (int i = 11; i <= 14; i++)
+                                                        {
+                                                            <option value="@i">@i h</option>
+                                                        }
+                                                    }
+                                                    else if (now.Hour > 14)
+                                                    {
+                                                        for (int i = 18; i <= 21; i++)
+                                                        {
+                                                            if (now.Hour <= i)
+                                                            {
+                                                                <option value="@i">@i</option>
+                                                            }
+                                                        }
+                                                    }
+                                                </select>
+                                                <div class="title-time">Phút</div>
+                                                <select class="form-select select-time" aria-label="Default select example" name="Minute" aria-placeholder="Chọn giờ">
+                                                    <option value="00">00</option>
+                                                    <option value="15">15</option>
+                                                    <option value="30">30</option>
+                                                    <option value="45">45</option>
+                                                </select>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-custom">
+                                        <div class="input-item mb-4 display-flex-col">
+                                            <div class="display-flex-row">
+                                                <div class="title-quantity">Số lượng người</div>
+                                                @Html.TextBoxFor(m => m.Capacity, new { @class = "border-0 rounded-0 input-area number gray-bg input-quantity", @placeholder = "Số lượng" })
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12 col-custom">
+                                        <div class="input-item mb-4">
+                                            <div class="title-booking">Ghi chú thêm cho nhà hàng: </div>
+                                            @Html.TextAreaFor(m => m.Note, new { @class = "border-0 rounded-0 w-100 input-area name gray-bg" })
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-custom mt-40">
+                                        <button type="submit" id="submit" name="submit" class="btn flosun-button secondary-btn theme-color rounded-0">
+                                            Đặt
+                                            bàn
+                                        </button>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    @Html.Action("GetAll", "Table")
+                }
+            }
+            else
             {
                 <div class="col">
                     <div class="booking-box">
-
-                        @Html.AntiForgeryToken()
                         <div class="comment-box">
-                            <h5 class="text-uppercase">Đặt bàn</h5>
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
-                            <div class="col mt-3">
-                                <div class="col-md-12 col-custom">
-                                    <div class="input-item mb-4">
-                                        <div class="title-booking">Tên khách hàng</div>
-                                        @Html.TextBoxFor(m => m.CusName, new { @class = "form-control", @placeholder = "Tên" })
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-custom">
-                                    <div class="input-item mb-4">
-                                        <div class="title-booking">Số điện thoại</div>
-                                        @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @placeholder = "Số điện thoại" })
-                                    </div>
-                                </div>
-                                <div class="col-12 col-custom">
-                                    <div class="input-item mb-4">
-                                        <div class="title-booking">Chọn Combo</div>
-                                        @Html.DropDownList("MenuId", null, htmlAttributes: new { @class = "form-select" })
-                                        @Html.ValidationMessageFor(model => model.MenuId, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-custom">
-                                    <div class="input-item mb-4">
-                                        <div class="title-booking">Chọn ngày</div>
-                                        @Html.EditorFor(m => m.ReservationDate, new { htmlAttributes = new { @type = "date", @class = "border-0 rounded-0 w-100 input-area email gray-bg", @placeholder = "dd-mm-yyyy" } })
-                                    </div>
-                                </div>
-                                <div class="col-12 col-custom">
-                                    <div class="input-item mb-4 display-flex-col">
-
-                                        <div class="title-booking">Chọn thời gian đến</div>
-                                        <div class="display-flex-row">
-                                            <div class="title-time">Giờ</div>
-                                            <select class="form-select select-time" aria-label="Default select example" name="Hours" aria-placeholder="Chọn giờ">
-                                                @for (int i = 11; i <= 21; i++)
-                                                {
-                                                    <option value="@i">@i h</option>
-                                                }
-                                            </select>
-                                            <div class="title-time">Phút</div>
-                                            <select class="form-select select-time" aria-label="Default select example" name="Minute" aria-placeholder="Chọn giờ">
-                                                <option value="00">00</option>
-                                                <option value="15">15</option>
-                                                <option value="30">30</option>
-                                                <option value="45">45</option>
-                                                <option value="60">60</option>
-                                            </select>
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="col-12 col-custom">
-                                    <div class="input-item mb-4 display-flex-col">
-
-                                        <div class="title-booking">Số lượng người</div>
-                                        <div class="display-flex-row">
-                                            <div class="title-quantity">Người lớn</div>
-                                            @Html.TextBoxFor(m => m.Adult, new { @class = "border-0 rounded-0 input-area number gray-bg input-quantity", @placeholder = "Số lượng" })
-                                            <div class="title-quantity">Trẻ Con</div>
-                                            @Html.TextBoxFor(m => m.Child, new { @class = "border-0 rounded-0 input-area number gray-bg input-quantity", @placeholder = "Số lượng" })
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-custom">
-                                    <div class="input-item mb-4">
-                                        <div class="title-booking">Ghi chú thêm cho nhà hàng: </div>
-                                        @Html.TextAreaFor(m => m.Note, new { @class = "border-0 rounded-0 w-100 input-area name gray-bg" })
-                                    </div>
-                                </div>
-                                <div class="col-12 col-custom mt-40">
-                                    <button type="submit" id="submit" name="submit" class="btn flosun-button secondary-btn theme-color rounded-0">
-                                        Đặt
-                                        bàn
-                                    </button>
-
-                                </div>
-                            </div>
+                            <h5 class="text-uppercase">Vui lòng đăng nhập để đặt bàn</h5>
+                            @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn flosun-button secondary-btn theme-color rounded-0" })
                         </div>
-
                     </div>
                 </div>
-                @Html.Action("GetAll", "Table")
             }
-
         </div>
     </div>
+</div>
 
-    @section scripts{
-        <script src="~/Assets/js/customize.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    }
+@section scripts{
+    <script src="~/Assets/js/customize.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+}
