Update Reservation View

--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -25,13 +25,13 @@
                                     <div class="col-md-12 col-custom">
                                         <div class="input-item mb-4">
                                             <div class="title-booking">Tên khách hàng</div>
-                                            @Html.TextBoxFor(m => m.CusName, new { @class = "form-control", @placeholder = "Tên", @disabled = "disable" })
+                                            @Html.TextBoxFor(m => m.CusName, new { @class = "form-control", @placeholder = "Tên" })
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="input-item mb-4">
                                             <div class="title-booking">Số điện thoại</div>
-                                            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @placeholder = "Số điện thoại", @disabled = "disable" })
+                                            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @placeholder = "Số điện thoại" })
                                         </div>
                                     </div>
                                     <div class="col-12 col-custom">
