--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="~/Assets/css/plugins/magnific-popup.css">
 
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="~/Assets/css/style.css">
+    <link rel="stylesheet" href="~/Assets/css/style.css" runat="server">
 </head>
 <body>
     <!--===== Pre-Loading area Start =====-->
