--- a/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
@@ -66,44 +66,8 @@
                                 <div class="object window-style-left window-5">
                                     |
                                 </div>
-
-                                <div class="object section-table-style table-2">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="2-1" id="ban2nguoi1">
-                                    <label class="form-check-label label-table" for="ban2nguoi1">
-                                        <img src="~/assets/images/booking/stand.png" alt="">
-                                        <div>
-                                            Khu vực bàn 2 người<br>
-                                            Ghi chú: có nhiều cửa sổ và có không gian riêng tư<br>
-                                            <br>
-                                            Số lượng còn: @ViewBag.Cap2f1
-                                        </div>
-                                    </label>
-                                </div>
-                                <div class="object section-table-style table-6">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="6-1" id="ban6nguoi1">
-                                    <label class="form-check-label label-table" for="ban6nguoi1">
-                                        <img src="~/assets/images/booking/stand.png" alt="">
-                                        <div>
-                                            Khu vực bàn 6 người<br>
-                                            Ghi chú: bàn số lượng lớn thích hợp đi nhiều người<br>
-                                            <br>
-                                            Số lượng còn: @ViewBag.Cap6f1
-                                        </div>
-                                    </label>
-                                </div>
-                                <div class="object section-table-style8 table-8">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="8-1" id="ban8nguoi1">
-                                    <label class="form-check-label label-table" for="ban8nguoi1">
-                                        <img src="~/assets/images/booking/stand.png" alt="">
-                                        <div>
-                                            Khu vực bàn 8 người<br>
-                                            Ghi chú: bàn số lượng lớn thích hợp đi nhiều người <br>
-                                            khuyến khích dành cho đại gia đình hoặc công ty <br>
-                                            <br>
-                                            Số lượng còn: @ViewBag.Cap8f1
-                                        </div>
-                                    </label>
-                                </div>
+                                
+                                @Html.Action("GetTablesByCapacity", "Table", new {floor = listFloorNoDup[i] })
                             </div>
                         </div>
                     }
@@ -127,43 +91,7 @@
                                 <div class="object window-style-left window-5">
                                     |
                                 </div>
-                                <div class="object section-table-style table-2">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="2-2" id="ban2nguoi2">
-                                    <label class="form-check-label label-table" for="ban2nguoi2">
-                                        <img src="~/assets/images/booking/stand.png" alt="">
-                                        <div>
-                                            Khu vực bàn 2 người<br>
-                                            Ghi chú: có nhiều cửa sổ và có không gian riêng tư<br>
-                                            <br>
-                                            Số lượng còn: @ViewBag.Cap2f2
-                                        </div>
-                                    </label>
-                                </div>
-                                <div class="object section-table-style table-6">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="6-2" id="ban6nguoi2">
-                                    <label class="form-check-label label-table" for="ban6nguoi2">
-                                        <img src="~/assets/images/booking/stand.png" alt="">
-                                        <div>
-                                            Khu vực bàn 6 người<br>
-                                            Ghi chú: bàn số lượng lớn thích hợp đi nhiều người<br>
-                                            <br>
-                                            Số lượng còn: @ViewBag.Cap6f2
-                                        </div>
-                                    </label>
-                                </div>
-                                <div class="object section-table-style8 table-8">
-                                    <input class="form-check-input input-custom-table" name="TableFloorCapacity" type="radio" value="8-2" id="ban8nguoi2">
-                                    <label class="form-check-label label-table" for="ban8nguoi2">
-                                        <img src="~/assets/images/booking/stand.png" alt="">
-                                        <div>
-                                            Khu vực bàn 8 người<br>
-                                            Ghi chú: bàn số lượng lớn thích hợp đi nhiều người <br>
-                                            khuyến khích dành cho đại gia đình hoặc công ty <br>
-                                            <br>
-                                            Số lượng còn: @ViewBag.Cap8f2
-                                        </div>
-                                    </label>
-                                </div>
+                                @Html.Action("GetTablesByCapacity", "Table", new { floor = listFloorNoDup[i] })
                             </div>
                         </div>
                     }
