--- a/src/FoodZone/FoodZone.Web/Assets/css/style.css
+++ b/src/FoodZone/FoodZone.Web/Assets/css/style.css
@@ -7844,52 +7844,132 @@ mark {
 .window-5 {
     top: 90%;
 }
-
-.section-table-style {
-    width: 40%;
-    height: 40%;
-    border-radius: 3px;
-}
-
-.section-table-style>label>img {
-    width: 50px;
-    height: 50px;
-}
-
-.label-table:hover {
-    border: 1px solid black;
-}
-
 .input-custom-table:checked+label {
     border: 1px solid black;
 }
-
 .label-table {
     width: 100%;
     height: 100%;
     padding: 10px
 }
 
-.table-6 {
+
+.table-2{
     border-radius: 3px;
     bottom: 5px;
-}
-
-.section-table-style8 {
     width: 40%;
-    height: 70%;
+    height: 40%;
     border-radius: 3px;
 }
 
-.section-table-style8>label>img {
+.table-2>label>img {
     width: 50px;
     height: 50px;
 }
 
+.table-2 .label-table:hover {
+    border: 1px solid black;
+}
+
+.table-6{
+    border-radius: 3px;
+    width: 50%;
+    height: 40%;
+    border-radius: 3px;
+}
+
+.table-6>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-6 .label-table:hover {
+    border: 1px solid black;
+}
+
 .table-8 {
+    width: 40%;
+    height: 70%;
     border-radius: 3px;
     right: 5px;
 }
+
+.table-8>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-8 .label-table:hover {
+    border: 1px solid black;
+}
+
+
+.table-3 {
+    width: 40%;
+    height: 30%;
+    border-radius: 3px;
+    bottom: 5px;
+}
+
+.table-3>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-3 .label-table:hover {
+    border: 1px solid black;
+}
+
+.table-5 {
+    width: 50%;
+    height: 30%;
+    border-radius: 3px;
+    top: 35%;
+}
+
+.table-5>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-5 .label-table:hover {
+    border: 1px solid black;
+}
+
+.table-9 {
+    width: 50%;
+    height: 30%;
+    top : 0px;
+    border-radius: 3px;
+}
+
+.table-9>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-9 .label-table:hover {
+    border: 1px solid black;
+}
+
+.table-12 {
+    width: 40%;
+    height: 90%;
+    top: 0px;
+    right: 5px;
+    border-radius: 3px;
+}
+
+.table-12>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-12 .label-table:hover {
+    border: 1px solid black;
+}
+
+
 
 
 /* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
